--- a/porftolio.html
+++ b/porftolio.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Viktor Veselinov</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Test</h1>
-    <p>Testa</p>
-</body>
-
-</html>
+    <header>
+        <h1>Portfolio</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>My Projects</h2>
+            <ul>
+                <li>
+                    <h3>Project 1</h3>
+                    <p>desc</p>
+                </li>
+                <li>
+                    <h3>Project 2</h3>
+                    <p>desc</p>
+                </li>
+                </
