--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Viktor Veselinov</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Test</h1>
-    <p>Testa</p>
+    <header>
+        <h1>About Me</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>My Story</h2>
+            <p>[Write a brief biography about yourself, your background, and what you do professionally or personally.]
+            </p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
