--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viktor Veselinov - Homepage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Test</h1>
-    <p>Testa</p>
+    <header>
+        <h1>Welcome to My Personal Website</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <p>Hello! I'm [Your Name], a [Your Profession/Title]. Welcome to my personal website where you can learn
+                more about my work and background.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
