--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume - Viktor Veselinov</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
 <body>
-    <h1>Test</h1>
-    <p>Testa</p>
+    <header>
+        <h1>Resume</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="resume.html">Resume</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Professional Experience</h2>
+            <p>test</p>
+        </section>
+        <section>
+            <h2>Education</h2>
+            <p>test</p>
+        </section>
+    </main>
 </body>
 
 </html>
